# WinForge

./: .gitignore  PROJECT_STATE.md  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
app/: __init__.py  config.py  installer.py  plugins.py  registry.py  sandbox.py  settings_panel.py  telemetry.py  updater.py  window.py
config/: features.json  settings.json
plugins/: __init__.py
plugins/hello/: __init__.py
tests/: test_app.py  test_registry.py
